# burning_ship

./: .gitignore  CMakeLists.txt  Makefile  README.md  bench.sh  bench_div.sh  bench_it.sh  clean.sh
src/: burning_ship.cpp  main.cpp  main.cpp.old  params.cpp  png_maker.cpp
src/includes/: burning_ship.hpp  params.hpp  png_maker.hpp
